--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_book_order
+spring.datasource.url=jdbc:postgresql://localhost:5432/onlinebook
 spring.datasource.username=postgres
 spring.datasource.password=***************
 spring.datasource.driver-class-name=org.postgresql.Driver
